Summary : fixed cost function

--- a/Coursera/Natural Language Processing with Sequence Models/utf-8''C3_W4_Assignment.ipynb
+++ b/Coursera/Natural Language Processing with Sequence Models/utf-8''C3_W4_Assignment.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -224,7 +224,7 @@
        "4            Which fish would survive in salt water?             0  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -468,7 +468,15 @@
     "id": "m9ZmfpGWpiuI",
     "outputId": "d2995c9a-92b4-4892-d34b-c77b94b27134"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of the vocabulary is:  36268\n"
+     ]
+    }
+   ],
    "source": [
     "# Building the vocabulary with the train set         (this might take a minute)\n",
     "from collections import defaultdict\n",
@@ -488,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -498,7 +506,17 @@
     "id": "TTMRF8eZpiuK",
     "outputId": "f81d4dc1-7cf9-4476-a454-467b54fe4dc4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "print(vocab['<PAD>'])\n",
     "print(vocab['Astrology'])\n",
@@ -507,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -522,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -532,7 +550,16 @@
     "id": "3QgGE9KlpiuP",
     "outputId": "19c3cf93-cf0d-4f8f-da99-e75481f16599"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set has reduced to:  111486\n",
+      "Test set length:  10240\n"
+     ]
+    }
+   ],
    "source": [
     "print('Train set has reduced to: ', len(Q1_train) ) \n",
     "print('Test set length: ', len(Q1_test) ) "
@@ -553,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -574,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -584,7 +611,27 @@
     "id": "Dpawm38dpiuU",
     "outputId": "ef1aa65b-c89b-46f9-a9cf-f73748f1ee56"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first question in the train set:\n",
+      "\n",
+      "Astrology: I am a Capricorn Sun Cap moon and cap rising...what does that say about me? \n",
+      "\n",
+      "encoded version:\n",
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21] \n",
+      "\n",
+      "first question in the test set:\n",
+      "\n",
+      "How do I prepare for interviews for cse? \n",
+      "\n",
+      "encoded version:\n",
+      "[32, 38, 4, 107, 65, 1015, 65, 11509, 21]\n"
+     ]
+    }
+   ],
    "source": [
     "print('first question in the train set:\\n')\n",
     "print(Q1_train_words[0], '\\n') \n",
@@ -609,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -619,7 +666,17 @@
     "id": "BmhrWPtgpiuY",
     "outputId": "7272fb74-79e6-499a-ce95-d11b9edcd64a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate questions:  111486\n",
+      "The length of the training set is:   89188\n",
+      "The length of the validation set is:  22298\n"
+     ]
+    }
+   ],
    "source": [
     "# Splitting the data\n",
     "cut_off = int(len(Q1_train)*.8)\n",
@@ -664,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -749,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -759,7 +816,25 @@
     "id": "ZFZeBPnW8Mlb",
     "outputId": "7a31cd19-55dc-4b97-f288-6c59c6a34b53"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First questions  :  \n",
+      " [[  30   87   78  134 2132 1981   28   78  594   21    1    1    1    1\n",
+      "     1    1]\n",
+      " [  30   55   78 3541 1460   28   56  253   21    1    1    1    1    1\n",
+      "     1    1]] \n",
+      "\n",
+      "Second questions :  \n",
+      " [[  30  156   78  134 2132 9508   21    1    1    1    1    1    1    1\n",
+      "     1    1]\n",
+      " [  30  156   78 3541 1460  131   56  253   21    1    1    1    1    1\n",
+      "     1    1]]\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 2\n",
     "res1, res2 = next(data_generator(train_Q1, train_Q2, batch_size))\n",
@@ -858,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -910,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -920,7 +995,28 @@
     "id": "kvQ_jf52-JAn",
     "outputId": "d409460d-2ffb-4ae6-8745-ddcfa1d892ad"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parallel_in2_out2[\n",
+      "  Serial[\n",
+      "    Embedding_41699_128\n",
+      "    LSTM_128\n",
+      "    Mean\n",
+      "    Normalize\n",
+      "  ]\n",
+      "  Serial[\n",
+      "    Embedding_41699_128\n",
+      "    LSTM_128\n",
+      "    Mean\n",
+      "    Normalize\n",
+      "  ]\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "# check your model\n",
     "model = Siamese()\n",
@@ -1028,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1058,20 +1154,20 @@
     "    # use fastnp to grab all postive `diagonal` entries in `scores`\n",
     "    positive = fastnp.diagonal (scores)  # the positive ones (duplicates)\n",
     "    # multiply `fastnp.eye(batch_size)` with 2.0 and subtract it out of `scores`\n",
-    "    negative_without_positive = scores - (fastnp.eye(batch_size)*2)\n",
+    "    negative_without_positive = scores - fastnp.eye(batch_size)*2.0\n",
     "    # take the row by row `max` of `negative_without_positive`. \n",
     "    # Hint: negative_without_positive.max(axis = [?])  \n",
-    "    closest_negative = negative_without_positive.max (axis=[0])\n",
+    "    closest_negative = negative_without_positive.max (axis=1)\n",
     "    # subtract `fastnp.eye(batch_size)` out of 1.0 and do element-wise multiplication with `scores`\n",
-    "    negative_zero_on_duplicate = fastnp.multiply ((1 - fastnp.eye(batch_size)), scores)\n",
+    "    negative_zero_on_duplicate = (1.0 - fastnp.eye(batch_size)) * scores\n",
     "    # use `fastnp.sum` on `negative_zero_on_duplicate` for `axis=1` and divide it by `(batch_size - 1)` \n",
-    "    mean_negative = (fastnp.sum (negative_zero_on_duplicate, axis=1)) / (batch_size - 1)\n",
+    "    mean_negative = fastnp.sum (negative_zero_on_duplicate, axis=1) / (batch_size - 1.0)\n",
     "    # compute `fastnp.maximum` among 0.0 and `A`\n",
     "    # A = subtract `positive` from `margin` and add `closest_negative` \n",
-    "    triplet_loss1 = fastnp.maximum (margin - positive + closest_negative,0)\n",
+    "    triplet_loss1 = fastnp.maximum (margin - positive + closest_negative, 0.0)\n",
     "    # compute `fastnp.maximum` among 0.0 and `B`\n",
     "    # B = subtract `positive` from `margin` and add `mean_negative`\n",
-    "    triplet_loss2 = fastnp.maximum (margin - positive - mean_negative, 0)\n",
+    "    triplet_loss2 = fastnp.maximum (margin - positive + mean_negative, 0.0)\n",
     "    # add the two losses together and take the `fastnp.mean` of it\n",
     "    triplet_loss = fastnp.mean (triplet_loss1+triplet_loss2)\n",
     "    \n",
@@ -1082,9 +1178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Triplet Loss: 1.3517538\n"
+     ]
+    }
+   ],
    "source": [
     "v1 = np.array([[0.26726124, 0.53452248, 0.80178373],[0.5178918 , 0.57543534, 0.63297887]])\n",
     "v2 = np.array([[ 0.26726124,  0.53452248,  0.80178373],[-0.5178918 , -0.57543534, -0.63297887]])\n",
@@ -1114,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1150,7 +1254,16 @@
     "id": "iPk7gh-nzCBg",
     "outputId": "a2e8525d-f89a-4d9d-c0d6-bd7406f0246a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_Q1.shape  (89188,)\n",
+      "val_Q1.shape    (22298,)\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 256\n",
     "train_generator = data_generator(train_Q1, train_Q2, batch_size, vocab['<PAD>'])\n",
@@ -1195,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1249,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1259,7 +1372,16 @@
     "id": "-3KXjmBo_6Xa",
     "outputId": "9d57f731-1534-4218-e744-783359d5cd19"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step      1: train TripletLoss |  0.25077301\n",
+      "Step      1: eval  TripletLoss |  0.25069049\n"
+     ]
+    }
+   ],
    "source": [
     "train_steps = 5\n",
     "training_loop = train_model(Siamese, TripletLoss, lr_schedule)\n",
@@ -1293,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1338,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1393,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1403,7 +1525,15 @@
     "id": "yeQjHxkfpivH",
     "outputId": "103b8449-896f-403d-f011-583df70afdae"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy 0.69091797\n"
+     ]
+    }
+   ],
    "source": [
     "# this takes around 1 minute\n",
     "accuracy = classify(Q1_test,Q2_test, y_test, 0.7, model, vocab, batch_size = 512) \n",
@@ -1461,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1522,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1532,7 +1662,28 @@
     "id": "Raojyhw3z7HE",
     "outputId": "b0907aaf-63c0-448d-99b0-012359381a97"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1  =  [[585  76   4  46  53  21   1   1]] \n",
+      "Q2  =  [[585  76   4  46  53  21   1   1]]\n",
+      "d   =  [[1.]]\n",
+      "res =  [[ True]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([[ True]], dtype=bool)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Feel free to try with your own questions\n",
     "question1 = \"When will I see you?\"\n",
@@ -1567,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1577,7 +1728,28 @@
     "id": "DZccIQ_lpivQ",
     "outputId": "3ed0af7e-5d44-4eb3-cebe-d6f74abe3e41"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1  =  [[  443  1145  3159  1169    78 29017    21     1]] \n",
+      "Q2  =  [[  443  1145  3159  1169    78 29017    21     1]]\n",
+      "d   =  [[1.0000002]]\n",
+      "res =  [[ True]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([[ True]], dtype=bool)"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Feel free to try with your own questions\n",
     "question1 = \"Do they enjoy eating the dessert?\"\n",
